--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,28 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-analytics.js"></script>
+
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyCdvy_lPGTxWhdFOf9gBNegLP9IjzUz9Oc",
+        authDomain: "livecryptomonitor.firebaseapp.com",
+        projectId: "livecryptomonitor",
+        storageBucket: "livecryptomonitor.appspot.com",
+        messagingSenderId: "87782439653",
+        appId: "1:87782439653:web:1c5d498fb41de38d5d720c",
+        measurementId: "G-6R69WJ9JKF"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </script>
   </body>
 </html>
