--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Live crypto monitoring"
+      content="Live crypto monitoring: price levels, orders, volumes on Binance spot"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Live crypto monitoring</title>
+    <title>Live crypto monitoring: price levels, orders, volumes on Binance spot</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
